Correction espace entre label et description

--- a/public/index.html
+++ b/public/index.html
@@ -1936,7 +1936,7 @@
             name="text-sm"
             label="Entrez votre âge"
             size="sm"
-            placeholder="ex : 24"
+            placeholder="25"
     ></qc-textfield>
 
     <qc-textfield
@@ -1982,7 +1982,6 @@
             name="text-xxl"
             label="Entrez votre adresse"
             size="xxl"
-            placeholder="ex : 1234 rue du Moulin"
             disabled
     ></qc-textfield>
 
