Correction de régression d'étiquettes cliquables pour les cases à cocher seules

--- a/public/index.html
+++ b/public/index.html
@@ -2242,7 +2242,7 @@
 
   <script>
     const tosForm = document.getElementById("exemple-tos-form");
-    const termsAcceptance = document.getElementById("exemple-une-case")
+    const termsAcceptance = document.getElementById("exemple-une-case");
     tosForm.addEventListener("submit", (event) => {
       event.preventDefault();
       if(termsAcceptance.checked) {
