--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
   <h2 class="qc-h4">Version HTML des composants</h2>
   <ul>
     <li><a href="#base-radio-button">Boutons radio</a></li>
+    <li><a href="#base-champ-texte">Champ texte</a></li>
   </ul>
 </nav>
 </div>
@@ -2998,6 +2999,7 @@
 </div>
 
     <hr />
+    <h2 class="qc-h2">Version HTML des composants</h2>
 
     <h2 id="base-radio-button">Boutons radio</h2>
 <h3>Exemples</h3>
@@ -3318,6 +3320,160 @@
         </tbody>
     </table>
 </div>
+
+    <h2 id="base-champ-texte">Champ texte</h2>
+
+<qc-doc-exemple caption="Exemples de champs de texte de différents formats et différents états">
+    <form id="formulaire-base-champs-textes" novalidate>
+        <div class="qc-textfield-container">
+            <label for="text-sm">Entrez votre âge</label>
+            <div class="qc-textfield qc-textfield--sm">
+                <input type="text" id="text-sm" name="text-sm" />
+            </div>
+        </div>
+
+        <div class="qc-textfield-container">
+            <label for="text-md">Entrez votre code postal</label>
+            <div class="qc-textfield qc-textfield--md">
+                <input type="text" id="text-md" name="text-md" placeholder="ex : G1A 1A1" />
+            </div>
+        </div>
+
+        <div class="qc-textfield-row">
+            <div class="qc-textfield-container">
+                <label for="telephone">Téléphone</label>
+                <div class="qc-textfield qc-textfield--md">
+                    <input type="text" id="telephone" name="telephone" placeholder="(123) 456-7890" />
+                </div>
+            </div>
+
+            <div class="qc-textfield-container">
+                <label for="poste">Poste</label>
+                <div class="qc-textfield qc-textfield--sm">
+                    <input type="text" id="poste" name="poste" placeholder="1234" />
+                </div>
+            </div>
+        </div>
+
+        <div class="qc-textfield-container">
+            <label for="text-lg">Entrez votre ville</label>
+            <div class="qc-textfield qc-textfield--lg">
+                <input type="text" id="text-lg" name="text-lg" placeholder="Ceci est un très long placeholder" />
+            </div>
+        </div>
+
+        <div class="qc-textfield-container">
+            <label for="text-xl">Entrez votre adresse courriel <span class="qc-textfield-required">*</span></label>
+            <div class="qc-textfield qc-textfield--xl">
+                <input type="text" id="text-xl" name="text-xl" placeholder="ex : jeantremblay@exemple.com" required />
+            </div>
+        </div>
+
+        <div class="qc-textfield-container qc-disabled">
+            <label for="text-xxl">Entrez votre adresse</label>
+            <div class="qc-textfield qc-textfield--xxl disabled">
+                <input type="text" id="text-xxl" name="text-xxl" placeholder="ex : 1234 rue du Moulin" disabled />
+            </div>
+        </div>
+
+        <div class="qc-textfield-container">
+            <label for="zone-xl">Commentaires</label>
+            <div id="description-zone-xl" class="qc-textfield-description">
+                Vous pouvez entrer des commentaires dans la zone de texte ci-dessous.
+            </div>
+            <div class="qc-textfield qc-textfield--xl">
+                <textarea id="zone-xl" name="zone-xl"></textarea>
+            </div>
+        </div>
+
+        <div class="qc-textfield-container">
+            <label for="zone-xxl">Suggestions <span class="qc-textfield-required">*</span></label>
+            <div id="description-zone-xxl" class="qc-textfield-description">
+                Vous pouvez entrer des suggestions dans la zone de texte ci-dessous.
+            </div>
+            <div class="qc-textfield qc-textfield--xxl">
+                <textarea id="zone-xxl" name="zone-xxl" maxlength="50" required></textarea>
+            </div>
+            <div id="charcount-zone-xxl" class="qc-textfield-charcount" aria-live="polite"></div>
+        </div>
+
+        <button type="submit" class="btn btn-sm btn-primary">Envoyer</button>
+    </form>
+
+    <script>
+        const form_BaseTextField = document.getElementById("formulaire-base-champs-textes");
+
+        form_BaseTextField.addEventListener("submit", (event) => {
+            event.preventDefault();
+
+            let isValid = true;
+
+            const requiredFields = form_BaseTextField.querySelectorAll("[required]");
+
+            requiredFields.forEach(field => {
+                const value = field.value?.trim();
+                const maxLength = parseInt(field.getAttribute("maxlength"), 10);
+                const container = field.closest(".qc-textfield");
+
+                // Réinitialiser l'état d'erreur
+                container?.classList.remove("error");
+
+                if (!value) {
+                    container?.classList.add("error");
+                    isValid = false;
+                    return;
+                }
+
+                if (!isNaN(maxLength) && value.length > maxLength) {
+                    container?.classList.add("error");
+                    isValid = false;
+                    return;
+                }
+            });
+
+            if (isValid) {
+                const formData = new FormData(form_BaseTextField);
+                let alertParts = ["Formulaire soumis avec les données suivantes :"];
+                for (const [key, val] of formData.entries()) {
+                    alertParts.push(`${key} : ${val}`);
+                }
+                alert(alertParts.join("\n"));
+            }
+        });
+
+        // Gestion du compteur de caractères
+        document.addEventListener("DOMContentLoaded", () => {
+            const fieldsWithMax = form_BaseTextField.querySelectorAll("textarea[maxlength]");
+
+            fieldsWithMax.forEach(field => {
+                const counterId = `charcount-${field.id}`;
+                const counter = document.getElementById(counterId);
+                const container = field.closest(".qc-textfield");
+
+                const updateCharCount = () => {
+                    const maxLength = parseInt(field.getAttribute("maxlength"), 10);
+                    const currentLength = field.value.length;
+                    const remaining = maxLength - currentLength;
+
+                    if (remaining >= 0) {
+                        counter.textContent = `${remaining} caractère${remaining > 1 ? 's' : ''} restant${remaining > 1 ? 's' : ''}`;
+                        counter.classList.remove("max-reached");
+                        container?.classList.remove("error");
+                    } else {
+                        const over = Math.abs(remaining);
+                        counter.textContent = `${over} caractère${over > 1 ? 's' : ''} en trop`;
+                        counter.classList.add("max-reached");
+                        container?.classList.add("error");
+                    }
+                };
+
+                updateCharCount();
+                field.addEventListener("input", updateCharCount);
+            });
+        });
+    </script>
+</qc-doc-exemple>
+
 
   </div>
 </main>
